--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="https://cdn.zugyuuun.com/libs/0.9/zgn.js"></script>
-<script src="shippo_test.js"></script>
+<script src="app.js"></script>
 <body class="example">
-  <button id="t1" class="btn">buttn1</button>
-  <button id="T2" class="btu">BUTTN2</button>
+  <button id="bright" class="btn">buttn1</button>
+  <button id="dark" class="btu">BUTTN2</button>
+
 </body>
 </html>
