--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="https://cdn.zugyuuun.com/libs/0.9/zgn.js"></script>
-<script src="config.js"></script>
+<!-- <script src="config.js"></script> -->
 <script src="app.js"></script>
 <body class="example">
   <button id="bright" class="btn">button1</button>
