--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <script src="config.js"></script>
 <script src="app2.js"></script>
 <body class="example">
-  <button id="bright" class="btn">button1</button>
-  <button id="dark" class="btu">BUTTON2</button>
+  <button id="on" class="btn">button1</button>
+  <button id="off" class="btu">BUTTON2</button>
 
 </body>
 </html>
