--- a/index.html
+++ b/index.html
@@ -1,18 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Fade MOTOR | ZUGYUUUN!</title>
+<title></title>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-<meta name="apple-mobile-web-app-capable" content="yes" />
-<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<style type="text/css" media="screen">
+*{
+  margin: 0;
+  padding: 0;
+}
+html, body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+button{
+  cursor: pointer;
+  width: 80px;
+  height: 80px;
+  font-size: 0.5em;
+  line-height: 2.0em;
+}
+</style>
 <script src="https://cdn.zugyuuun.com/libs/0.9/zgn.js"></script>
-<script src="config.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="app.js"></script>
-<body class="example">
-  <button id="on" class="btn">button1</button>
-  <button id="off" class="btu">BUTTON2</button>
-
+</head>
+<body>
+  <button id="on">ON</button>
+  <button id="off">OFF</button>
 </body>
 </html>
