--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ button{
 </style>
 <script src="https://cdn.zugyuuun.com/libs/0.9/zgn.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="simulator/config.js"></script>
 <script src="app.js"></script>
 </head>
 <body>
