--- a/index.html
+++ b/index.html
@@ -1,36 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title></title>
+<title>Blink LED | ZUGYUUUN! Examples</title>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
-<style type="text/css" media="screen">
-*{
-  margin: 0;
-  padding: 0;
-}
-html, body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
-  justify-content: center;
-  align-items: center;
-}
-button{
-  cursor: pointer;
-  width: 80px;
-  height: 80px;
-  font-size: 0.5em;
-  line-height: 2.0em;
-}
-</style>
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="https://cdn.zugyuuun.com/libs/0.9/zgn.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="simulator/config.js"></script>
 <script src="app.js"></script>
-</head>
-<body>
-  <button id="on">ON</button>
-  <button id="off">OFF</button>
+<body class="example">
+  <button id="on" class="btn">ON</button>
+  <button id="off" class="btn">OFF</button>
 </body>
 </html>
