--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <script src="https://cdn.zugyuuun.com/libs/0.9/zgn.js"></script>
 <script src="app.js"></script>
 <body class="example">
-  <button id="bright" class="btn">ON</button>
-  <button id="dark" class="btn">OFF</button>
+  <button id="on" class="btn">ON</button>
+  <button id="off" class="btn">OFF</button>
 </body>
 </html>
