--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
-<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="http://cdn.zugyuuun.com/libs/0.9/zgn.js"></script>
+<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="https://cdn.zugyuuun.com/libs/0.9/zgn.js"></script>
 <script src="app.js"></script>
 <body class="example">
   <button id="on" class="btn">ON</button>
