--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="https://cdn.zugyuuun.com/libs/0.9/zgn.js"></script>
-<script src="app.js"></script>
+<script src="shippo.js"></script>
 <body class="example">
   <button id="on" class="btn">ON</button>
   <button id="off" class="btn">OFF</button>
