--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="https://cdn.zugyuuun.com/libs/0.9/zgn.js"></script>
-<script src="shippo.js"></script>
+<script src="app.js"></script>
 <body class="example">
 
-<!--  <button id="on" class="btn">-1</button>
-  <button id="off" class="btn">10</button> -->
+  <button id="on" class="btn">-1</button>
+  <button id="off" class="btn">10</button>
 
-  <button id="1" class="btn">1</button>
+<!--  <button id="1" class="btn">1</button>
   <button id="-1" class="btn">-1</button>
   <button id="10" class="btn">10</button>
   <button id="-10" class="btn">-10</button>
   <button id="stop" class="btn">stop</button>
-
+-->
 </body>
 </html>
