--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <script src="app.js"></script>
 <body class="example">
 
-  <button id="on" class="btn">-1</button>
-  <button id="off" class="btn">10</button>
+<!--  <button id="on" class="btn">-1</button>
+  <button id="off" class="btn">10</button> -->
 
-<!--  <button id="1" class="btn">1</button>
+  <button id="1" class="btn">1</button>
   <button id="-1" class="btn">-1</button>
   <button id="10" class="btn">10</button>
   <button id="-10" class="btn">-10</button>
   <button id="stop" class="btn">stop</button>
--->
+
 </body>
 </html>
