--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<title>Blink LED | ZUGYUUUN! Examples</title>
+<title>Shippo_project</title>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="https://cdn.zugyuuun.com/libs/0.9/zgn.js"></script>
-<script src="shippo.js"></script>
+<script src="dc_motor.js"></script>
 <body class="example">
 
- <!-- <button id="bright" class="btn">bright</button>
-  <button id="dark" class="btn">dark</button>
--->
+  <button id="on" class="btn">ON</button>
+  <button id="off" class="btn">OFF</button>
+
+<!--
   <button id="1" class="btn">1</button>
   <button id="-1" class="btn">-1</button>
   <button id="10" class="btn">10</button>
   <button id="-10" class="btn">-10</button>
   <button id="stop" class="btn">stop</button>
+-->
 </body>
 </html>
