--- a/index.html
+++ b/index.html
@@ -16,10 +16,26 @@
   <button id="off" class="btn">OFF</button>
 -->
 
-  <button id="1" class="btn">1</button>
-  <button id="-1" class="btn">-1</button>
-  <button id="10" class="btn">10</button>
-  <button id="-10" class="btn">-10</button>
+  <button id="m1cw" class="btn">m1cw</button>
+  <button id="m1ccw" class="btn">m1ccw</button>
+  <button id="m2cw" class="btn">m2cw</button>
+  <button id="m2ccw" class="btn">m2ccw</button>
+
+  <button id="time1" class="btn">time1</button>
+  <button id="time-1" class="btn">time-1</button>
+  <button id="pwm1" class="btn">pwm1</button>
+  <button id="pwm-1" class="btn">pwm-1</button>
+
+  <button id="start" class="btn">start</button>
+
+<!--
+<br>
+  <button id="m2" class="btn">m2</button>
+  <button id="m2time1" class="btn">m2time1</button>
+  <button id="m2time-1" class="btn">m2time-1</button>
+  <button id="m2pwm1" class="btn">m2pwm1</button>
+  <button id="m2pwm-1" class="btn">m2pwm-1</button>
+-->
 
 </body>
 </html>
