--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
   <button id="m1ccw" class="btn">m1ccw</button>
   <button id="m2cw" class="btn">m2cw</button>
   <button id="m2ccw" class="btn">m2ccw</button>
-
+<br>
   <button id="time1" class="btn">time1</button>
   <button id="time-1" class="btn">time-1</button>
   <button id="pwm1" class="btn">pwm1</button>
   <button id="pwm-1" class="btn">pwm-1</button>
-
+<br>
   <button id="start" class="btn">start</button>
+  <button id="buruburu" class="btn">buruburu</button>
 
 <!--
 <br>
