--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <br>
   <button id="start" class="btn">start</button>
   <button id="buruburu" class="btn">buruburu</button>
+  <button id="buruburu2" class="btn">buruburu2</button>
 
 <!--
 <br>
