--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <button id="pwm-1" class="btn">pwm-1</button>
 <br>
   <button id="start" class="btn">start</button>
+  <button id="stop" class="btn">stop</button>
   <button id="buruburu" class="btn">buruburu</button>
   <button id="buruburu2" class="btn">buruburu2</button>
 
