--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <button id="stop" class="btn">stop</button>
   <button id="buruburu" class="btn">buruburu</button>
   <button id="buruburu2" class="btn">buruburu2</button>
+  <button id="buruburu3" class="btn">buruburu3</button>
 
 <!--
 <br>
