--- a/index.html
+++ b/index.html
@@ -24,23 +24,25 @@
 <br>
   <button id="time1" class="btn">time1</button>
   <button id="time-1" class="btn">time-1</button>
-  <button id="pwm1" class="btn">pwm1</button>
-  <button id="pwm-1" class="btn">pwm-1</button>
+<br>
 <br>
   <button id="start" class="btn">start</button>
   <button id="stop" class="btn">stop</button>
   <button id="buruburu" class="btn">buruburu</button>
   <button id="buruburu2" class="btn">buruburu2</button>
   <button id="buruburu3" class="btn">buruburu3</button>
-
-<!--
 <br>
-  <button id="m2" class="btn">m2</button>
-  <button id="m2time1" class="btn">m2time1</button>
-  <button id="m2time-1" class="btn">m2time-1</button>
-  <button id="m2pwm1" class="btn">m2pwm1</button>
-  <button id="m2pwm-1" class="btn">m2pwm-1</button>
+<br>
+  <button id="motion1" class="btn">motion1</button>
+  <button id="motion2" class="btn">motion2</button>
+  <button id="motion3" class="btn">motion3</button>
+  <button id="motion4" class="btn">motion4</button>
+<!--  <button id="motion5" class="btn">motion5</button>
+  <button id="motion6" class="btn">motion6</button>
+  <button id="motion7" class="btn">motion7</button>
+  <button id="motion8" class="btn">motion8</button>
 -->
+<!--
 
 </body>
 </html>
