--- a/index.html
+++ b/index.html
@@ -38,11 +38,9 @@
   <button id="motion3" class="btn">motion3</button>
   <button id="motion4" class="btn">motion4</button>
   <button id="motion5" class="btn">motion5</button>
-<!--  <button id="motion6" class="btn">motion6</button>
+  <button id="motion6" class="btn">motion6</button>
   <button id="motion7" class="btn">motion7</button>
   <button id="motion8" class="btn">motion8</button>
--->
-<!--
 
 </body>
 </html>
