--- a/index.html
+++ b/index.html
@@ -12,25 +12,20 @@
 <!--<script src="simulator/config.js"></script>-->
 <body class="example">
 
-<!--
-  <button id="on" class="btn">ON</button>
-  <button id="off" class="btn">OFF</button>
--->
-
   <button id="m1cw" class="btn">m1cw</button>
   <button id="m1ccw" class="btn">m1ccw</button>
   <button id="m2cw" class="btn">m2cw</button>
   <button id="m2ccw" class="btn">m2ccw</button>
 <br>
-  <button id="time1" class="btn">time1</button>
-  <button id="time-1" class="btn">time-1</button>
+  <button id="time100" class="btn">time100</button>
+  <button id="time-100" class="btn">time-100</button>
 <br>
 <br>
+  <button id="rotate" class="btn">rotate</button>
   <button id="start" class="btn">start</button>
   <button id="stop" class="btn">stop</button>
   <button id="buruburu" class="btn">buruburu</button>
   <button id="buruburu2" class="btn">buruburu2</button>
-  <button id="buruburu3" class="btn">buruburu3</button>
 <br>
 <br>
   <button id="motion1" class="btn">motion1</button>
@@ -41,6 +36,11 @@
   <button id="motion6" class="btn">motion6</button>
   <button id="motion7" class="btn">motion7</button>
   <button id="motion8" class="btn">motion8</button>
+<br><br>
+  <button id="upsmotor" class="btn">upsmotor</button>
+  <button id="downsmotor" class="btn">downsmotor</button>
+  <button id="uplmotor" class="btn">uplmotor</button>
+  <button id="downlmotor" class="btn">downlmotor</button>
 
 </body>
 </html>
