--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="https://cdn.zugyuuun.com/libs/0.9/zgn.js"></script>
-<script src="dc_motor.js"></script>
+<script src="dc_motor_buckup.js"></script>
 <!--<script src="simulator/config.js"></script>-->
 <body class="example">
 
