--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
   <button id="downsmotor" class="btn">downsmotor</button>
   <button id="uplmotor" class="btn">uplmotor</button>
   <button id="downlmotor" class="btn">downlmotor</button>
+<br><br>
+  <button id="joy" class="btn">joy</button>
+
 
 </body>
 </html>
