--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   <button id="downsmotor" class="btn">downsmotor</button>
   <button id="uplmotor" class="btn">uplmotor</button>
   <button id="downlmotor" class="btn">downlmotor</button>
+  <button id="udmotor" class="btn">udmotor</button>
 <br><br>
   <button id="joy" class="btn">joy</button>
 
