--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <button id="udmotor" class="btn">udmotor</button>
 <br><br>
   <button id="joy" class="btn">joy</button>
-
+  <button id="anger" class="btn">anger</button>
 
 </body>
 </html>
