--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <br><br>
   <button id="joy" class="btn">joy</button>
   <button id="anger" class="btn">anger</button>
+  <button id="anticipation" class="btn">anticipation</button>
 
 </body>
 </html>
