--- a/index.html
+++ b/index.html
@@ -45,7 +45,15 @@
 <br><br>
   <button id="joy" class="btn">joy</button>
   <button id="anger" class="btn">anger</button>
+  <button id="trust" class="btn">trust</button>
+  <button id="surprise" class="btn">surprise</button>
+<br>
+  <button id="sadness" class="btn">sadness</button>
+  <button id="disgust" class="btn">disgust</button>
+  <button id="fear" class="btn">fear</button>
   <button id="anticipation" class="btn">anticipation</button>
-
 </body>
 </html>
+
+
+予測悲しみ嫌悪恐怖
